@@ -2,8 +2,11 @@ package com.beehyv.tbalert.tbalertbackend.service.impl;
 
 import com.beehyv.tbalert.tbalertbackend.dto.input.PersonInputDTO;
 import com.beehyv.tbalert.tbalertbackend.dto.output.PersonOutputDTO;
+import com.beehyv.tbalert.tbalertbackend.entity.Address;
 import com.beehyv.tbalert.tbalertbackend.entity.Person;
+import com.beehyv.tbalert.tbalertbackend.mapper.AddressMapper;
 import com.beehyv.tbalert.tbalertbackend.mapper.PersonMapper;
+import com.beehyv.tbalert.tbalertbackend.repository.AddressRepo;
 import com.beehyv.tbalert.tbalertbackend.repository.PersonRepo;
 import com.beehyv.tbalert.tbalertbackend.service.PersonService;
 import lombok.AllArgsConstructor;
@@ -11,13 +14,14 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @AllArgsConstructor
 public class PersonServiceImpl implements PersonService {
 
+    private final AddressMapper addressMapper;
+    private final AddressRepo addressRepo;
     private PersonRepo personRepo;
     private PersonMapper personMapper;
 
@@ -26,6 +30,8 @@ public class PersonServiceImpl implements PersonService {
         log.info("Service called for Add person: {}", person);
         Person personSaved = personMapper.toPerson(person);
         personSaved = personRepo.save(personSaved);
+        Address address = addressMapper.toAddress(personSaved, person);
+        addressRepo.save(address);
         return personMapper.toPersonOutputDTO(personSaved);
     }
 
@@ -37,6 +43,16 @@ public class PersonServiceImpl implements PersonService {
 
     @Override
     public List<PersonOutputDTO> getAll() {
-        return personRepo.findAll().stream().map(personMapper::toPersonOutputDTO).collect(Collectors.toList());
+        return personRepo.findAll().stream().map(personMapper::toPersonOutputDTO).toList();
+    }
+
+    @Override
+    public PersonOutputDTO getByEmail(String email) {
+
+        Person person=personRepo.findByEmail(email);
+        if(person==null){
+            throw new IllegalArgumentException("Person not found for email: "+email);
+        }
+        return personMapper.toPersonOutputDTO(person);
     }
 }
